# servers

src/filesystem_py/: README.md  pyproject.toml
src/filesystem_py/src/mcp_server_filesystem/: __init__.py  __main__.py  server.py
