[project]
name = "mcp-server-filesystem-py"
version = "0.1.0"
description = "A Model Context Protocol server providing filesystem tools for LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenAI"}]
keywords = ["filesystem", "mcp", "llm"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
mcp-server-filesystem-py = "mcp_server_filesystem:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pyright>=1.1.389", "ruff>=0.7.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
